--- a/WebService/app/src/main/res/layout/fragment_historique_des_activites.xml
+++ b/WebService/app/src/main/res/layout/fragment_historique_des_activites.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="habib.webservice.Historique_des_activites">
+    tools:context=".Fragemnts.Historique_des_activites">
 
     <!-- TODO: Update blank fragment layout -->
 
