--- a/WebService/app/src/main/res/values/colors.xml
+++ b/WebService/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="whited">#8E7B7B</color>
     <color name="bleuciel">#D5E6EB</color>
     <color name="black">#172124</color>
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="windowBackground">#FFFFFF</color>
+    <color name="navigationBarColor">#000000</color>
 </resources>
