--- a/WebService/app/src/main/res/layout/fragment_list_des_activite.xml
+++ b/WebService/app/src/main/res/layout/fragment_list_des_activite.xml
@@ -1,15 +1,43 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="habib.webservice.Fragemnts.ListDesActivite">
+    android:id="@+id/fragment_list_activite"
+android:orientation="vertical"
+    tools:context="habib.webservice.Fragemnts.ListDesActivite"
+    >
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textAppearance="?android:attr/textAppearanceLarge"
+       android:id="@+id/textView28"
+       android:layout_gravity="center_horizontal" />
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textAppearance="?android:attr/textAppearanceLarge"
+       android:id="@+id/textView27"
+       android:layout_gravity="center_horizontal" />
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textAppearance="?android:attr/textAppearanceLarge"
+       android:text="Catalogue des activités"
+       android:id="@+id/textView26"
+       android:layout_gravity="center_horizontal"
+       android:textColor="#de1414" />
 
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:id="@+id/listActivite">
+       android:id="@+id/listActivite"
+       android:layout_centerVertical="true"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentStart="true">
    </ListView>
 
 
-
-</RelativeLayout>
+</LinearLayout>
