--- a/WebService/app/src/main/res/layout/activity_login.xml
+++ b/WebService/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:background="@color/bleuciel"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="habib.webservice.Login"
+    tools:context=".Activity.Login"
     android:weightSum="1">
 
     <ImageView
