--- a/WebService/app/src/main/res/layout/activity_main.xml
+++ b/WebService/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:background="@color/bleuciel"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="habib.webservice.MainActivity">
+    tools:context=".Activity.MainActivity">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,11 +20,10 @@
         android:layout_alignParentTop="true">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/imageView2"
-            android:src="@drawable/ic_ame_inscr"
-            android:layout_gravity="center_horizontal" />
+            android:src="@drawable/ic_ame_inscr" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,7 +80,9 @@
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/btEffacer"
                 android:layout_marginRight="45dp"
-                android:layout_marginEnd="45dp" />
+                android:layout_marginEnd="45dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -90,9 +91,7 @@
                 android:id="@+id/btEffacer"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="78dp"
-                android:layout_marginEnd="78dp" />
+                android:layout_alignParentEnd="true" />
         </RelativeLayout>
 
     </LinearLayout>
