--- a/WebService/app/src/main/res/layout/activity_splash_screen.xml
+++ b/WebService/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="habib.webservice.SplashScreen"
+    tools:context=".Activity.SplashScreen"
     android:background="#60d2cc">
 
     <TextView
