--- a/WebService/app/src/main/res/layout/fragment_ajouter__conjoint.xml
+++ b/WebService/app/src/main/res/layout/fragment_ajouter__conjoint.xml
@@ -5,11 +5,10 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:background="@color/bleuciel"
     android:id="@+id/fragAjoutConjoint"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="habib.webservice.MainActivity">
+    tools:context=".Activity.MainActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -63,7 +62,7 @@
             <EditText
                 android:layout_width="243dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
+                android:inputType="date"
                 android:ems="10"
                 android:id="@+id/txtDate_naissanceConjoint"
                 android:hint="Donner la Date naissance"
