--- a/WebService/app/src/main/res/layout/fragment_modifier_info_pers.xml
+++ b/WebService/app/src/main/res/layout/fragment_modifier_info_pers.xml
@@ -5,22 +5,24 @@
     tools:context="habib.webservice.Fragemnts.ModifierInfoPers">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Modifier votre information personnel"
-        android:id="@+id/textView24"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <LinearLayout
         android:orientation="vertical"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/textView24"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="47dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_marginTop="60dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Modifier votre information personnel"
+            android:id="@+id/textView24"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
         <EditText
             android:layout_width="match_parent"
