--- a/WebService/app/src/main/res/layout/fragment_modifier_info_pers.xml
+++ b/WebService/app/src/main/res/layout/fragment_modifier_info_pers.xml
@@ -36,14 +36,6 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/txtOldPassword"
-            android:hint="Old passord" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
             android:id="@+id/txtNewPassword"
             android:hint="New Password" />
 
@@ -63,18 +55,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Modifier"
-                android:id="@+id/btModifierAdherent"
+                android:id="@+id/btModifierInfoPers"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Annuler"
-                android:id="@+id/button2"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
         </RelativeLayout>
 
     </LinearLayout>
