--- a/WebService/app/src/main/res/layout/fragment_info_conjoint.xml
+++ b/WebService/app/src/main/res/layout/fragment_info_conjoint.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listInfoConjoint">
-
     </ListView>
+    <include layout="@layout/fragment_modifier_conjoint" />
 
 
 </FrameLayout>
