--- a/WebService/app/src/main/res/layout/activity_ajouter_enfant.xml
+++ b/WebService/app/src/main/res/layout/activity_ajouter_enfant.xml
@@ -7,15 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/activityModifierEnfant"
-    tools:context="habib.webservice.Activity.ModifierEnfant">
+    android:id="@+id/ajouterEnfant"
+    tools:context="habib.webservice.Activity.AjouterEnfant">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView36"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 </RelativeLayout>
