--- a/WebService/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/WebService/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -15,6 +15,10 @@
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_tap_and_play_black_24dp"
             android:title="Notification" />
+        <item
+            android:id="@+id/nav_point"
+            android:icon="@drawable/ic_visibility_black_24dp"
+            android:title="Consulter votre point" />
 
     </group>
 
