--- a/WebService/app/src/main/res/layout/fragment_historique_des_activites.xml
+++ b/WebService/app/src/main/res/layout/fragment_historique_des_activites.xml
@@ -13,7 +13,12 @@
         android:text="Historique"
         android:id="@+id/textView7"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dp"
-        />
+        android:layout_centerHorizontal="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listActiviteHis"
+        android:layout_below="@+id/textView7"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
