--- a/WebService/app/src/main/res/layout/activity_main.xml
+++ b/WebService/app/src/main/res/layout/activity_main.xml
@@ -78,9 +78,6 @@
                 android:text="Inscrire"
                 android:id="@+id/btInscrire"
                 android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/btEffacer"
-                android:layout_marginRight="45dp"
-                android:layout_marginEnd="45dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
@@ -90,8 +87,7 @@
                 android:text="Effacer"
                 android:id="@+id/btEffacer"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_centerHorizontal="true" />
         </RelativeLayout>
 
     </LinearLayout>
