--- a/WebService/app/src/main/res/layout/fragment_info_enfant.xml
+++ b/WebService/app/src/main/res/layout/fragment_info_enfant.xml
@@ -1,15 +1,37 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="habib.webservice.Fragemnts.InfoEnfant">
 
     <!-- TODO: Update blank fragment layout -->
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Mes enfants"
+        android:id="@+id/textView42"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp" />
+
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listInfoEnfant">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listInfoEnfant"
+        android:layout_below="@+id/textView42"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="62dp" />
 
-    </ListView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/exceptionEnfant"
+        android:layout_alignTop="@+id/listInfoEnfant"
+        android:layout_centerHorizontal="true" />
 
-</FrameLayout>
+</RelativeLayout>
