--- a/WebService/app/src/main/res/layout/row_item.xml
+++ b/WebService/app/src/main/res/layout/row_item.xml
@@ -165,9 +165,20 @@
         android:layout_height="wrap_content"
         android:text="Pour conjoint"
         android:id="@+id/btDemanderActivitePourConjoint"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="152dp"
-        android:layout_toRightOf="@+id/textView13"
+        android:layout_below="@+id/btDemander"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pour enfant"
+        android:id="@+id/toPartEnfant"
+        android:layout_below="@+id/btDemanderActivitePourConjoint"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
