--- a/WebService/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/WebService/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -22,7 +22,7 @@
 
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Voir">
         <menu>
             <item
                 android:id="@+id/nav_share"
