--- a/WebService/app/src/main/res/layout/activity_authentification.xml
+++ b/WebService/app/src/main/res/layout/activity_authentification.xml
@@ -96,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Create Account ? Signup"
+            android:text="Créer un compte"
             android:textColor="#d9e5f3"
             android:letterSpacing="0.1"/>
     </LinearLayout>
