--- a/WebService/app/src/main/res/layout/fragment_affiche_notif.xml
+++ b/WebService/app/src/main/res/layout/fragment_affiche_notif.xml
@@ -9,4 +9,13 @@
     android:layout_height="match_parent"
     android:id="@+id/listNotif">
 </ListView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/exceptionNotification"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="61dp" />
 </RelativeLayout>
