--- a/WebService/app/src/main/res/layout/fragment_ajouter__conjoint.xml
+++ b/WebService/app/src/main/res/layout/fragment_ajouter__conjoint.xml
@@ -31,6 +31,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Ajouter votre conjoint"
+                android:id="@+id/textView36"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/textView21"
                 android:layout_gravity="center_horizontal" />
 
